[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Game/SplashScreen.gd" type="Script" id=1]
[ext_resource path="res://Visuals/Map/MCGoronQuest2.png" type="Texture" id=2]
[ext_resource path="res://Visuals/Fonts/immortal/IMMORTAL.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Audio/Musics/Menu.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Audio/Music.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Interface/SceneFader.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Visuals/Fonts/immortal/IMMORTAL.ttf"

[sub_resource type="DynamicFont" id=2]
size = 137
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Visuals/Fonts/immortal/IMMORTAL.ttf"

[sub_resource type="DynamicFont" id=4]
size = 58
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 3 )

[node name="SplashScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 250.0
margin_right = 20.0
margin_bottom = 290.0
grow_horizontal = 2

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1014.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
text = "Le Nom du Jeu"
align = 1
valign = 1

[node name="SubTitle" type="Label" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 1014.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 4 )
text = "Sous-Titre"
valign = 1

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = 210.0
margin_right = 6.0
margin_bottom = 230.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
action_mode = 0
text = "Jouer !"
flat = true
icon_align = 1

[node name="Underline" type="ColorRect" parent="Play"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 20.5
margin_right = 62.5
margin_bottom = 22.5
color = Color( 0.807843, 0.807843, 0.807843, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Music" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 4 )

[node name="SceneFader" parent="." instance=ExtResource( 6 )]

[connection signal="mouse_entered" from="Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
